# dw_op

./: .gitattributes  .gitignore  config.py  docker-compose.yml  get_armorial.py  pyproject.toml  readme.md  requirements.txt  updatedb.sql  viewer.py  viewer.wsgi
scripts/: start_op_ovh.sh
sql-init/: dev-db.sql  dev-db2.sql
static/js/: mvc.js
templates/: armorial.html  base.html  choose_persona.html  editor.html  exception.html  front.html  persona.html  recommend_0.html  recommend_1.html  recommend_2.html  recommend_4.html
viewer/: __init__.py  db.py
viewer/blueprints/auth/: __init.py__  __init__.py
viewer/config/: __init__.py
viewer/static/js/: form.js
viewer/templates/: crown.html  privacy.html  search.html
